--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
         <!-- Profile Description -->
         <div id="profile_desc">
             <p>
-            	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac risus nibh. Donec adipiscing luctus tur
+              백엔드,프론트엔드에 대해 배움의 열정이 깊고, 궁금한 것이 있다면 깊고, 신속하게 알아내려하고 생각하는 취업준비생입니다.
             </p>
             
         </div>
