--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
         <!-- Profile Description -->
         <div id="profile_desc">
             <p>
-              개발에 대하여 열정이 있고, 언제나 노력하고 성실하게 임하는 취업준비생입니다.
+              개발에 대하여 열정이 있고, 언제나 노력하고 성실하게 임하는   초보개발자입니다.
             </p>
             
         </div>
